--- a/demoweb/.ebextensions/04-tomcat.config
+++ b/demoweb/.ebextensions/04-tomcat.config
@@ -4,4 +4,4 @@
 option_settings:
   - namespace:  aws:elasticbeanstalk:container:tomcat:jvmoptions
     option_name:  JVM Options
-    value:  -agentpath:/opt/dynatrace-6.5/agent/lib64/libdtagent.so=name=DemoApp,collector=ec2-54-89-79-162.compute-1.amazonaws.com:9998
+    value:  -agentpath:/opt/dynatrace-6.5/agent/lib64/libdtagent.so=name=DemoApp,collector=ec2-35-165-153-113.us-west-2.compute.amazonaws.com:9998
